--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ button {
   margin: 0 auto;
   border: none;
   shadow: none;
+  outline:none;
 }
 
 #hourly-forecast {
@@ -125,7 +126,7 @@ button {
 @media only screen and (max-width:450px) {
    h1 {
       font-size : 45px;
-      padding-top : 90px;
+      padding-top : 80px;
       }
 
   h2 {
